[gd_scene load_steps=5 format=2]

[ext_resource path="res://obstacles/guns/laser gun/LaserGun.gd" type="Script" id=1]
[ext_resource path="res://obstacles/guns/turret/clipart2761458.png" type="Texture" id=2]
[ext_resource path="res://obstacles/guns/laser gun/Destructo Disk Moving (DBZ Sound Effect) (128kbit_Opus).wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 7.55952 )

[node name="LaserGun" type="Node2D"]
script = ExtResource( 1 )
time_cooldown = 1.5
time_first_shoot = 0.1
laser_size = 15

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 28, -6 )
rotation = 4.71239
scale = Vector2( 5, 1 )
enabled = true
cast_to = Vector2( 0, 1500 )
collision_mask = 5

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 1.1, 1, 1, 1 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 15.0
default_color = Color( 1, 0, 0, 1 )
end_cap_mode = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0.793701, -5.22205 )
shape = SubResource( 1 )

[node name="BeamStart" type="Position2D" parent="."]
position = Vector2( 28, -6 )

[node name="TimerCooldown" type="Timer" parent="."]
one_shot = true

[node name="TimerShooting" type="Timer" parent="."]
one_shot = true

[node name="TimerFirstShoot" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 1.68179

[node name="clipart2761458" type="Sprite" parent="."]
position = Vector2( -16, -4.8252 )
rotation = 1.5708
texture = ExtResource( 2 )
vframes = 3
hframes = 8
frame = 12
[connection signal="timeout" from="TimerCooldown" to="." method="_on_TimerCooldown_timeout"]
[connection signal="timeout" from="TimerShooting" to="." method="_on_TimerShooting_timeout"]
[connection signal="timeout" from="TimerFirstShoot" to="." method="_on_TimerFirstShoot_timeout"]
